@@ -5,3 +5,5 @@
    These two tools intelligently paint large and small brick patterns on the
    canvas. The bricks can be tinted various redish hues by selecting
    different colors in the color palette.
+
+   See also: Pixels
