@@ -1,0 +1,7 @@
+                         Tux Paint "Magic" Tool: Clone
+
+                  By Bill Kendrick <bill@newbreedsoftware.com>
+
+   Clone (copy, via painting) part of the picture. Click ones to choose the
+   source, then click and drag to clone it elsewhere in the drawing. Once you
+   release, click to choose another source and start again.
