@@ -6,4 +6,5 @@
 <h1 align="center">Tux Paint "Magic" Tool: Bricks</h1>
 <h2 align="center">By Albert Cahalan &lt;<a href="mailto:albert@users.sf.net">albert@users.sf.net</a>&gt;</h2>
 <p>These two tools intelligently paint large and small brick patterns on the canvas.  The bricks can be tinted various redish hues by selecting different colors in the color palette.</p>
+<p>See also: <a href="pixels.html">Pixels</a></p>
 </body></html>
