@@ -1,10 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<body><html><head><title>Tux Paint "Magic" Tool: Pixels</title>
+<body><html><head><title>Tux Paint "Magic" Tool: Clone</title>
 <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#FF0000" alink="#FF00FF">
-<h1 align="center">Tux Paint "Magic" Tool: Pixels</h1>
+<h1 align="center">Tux Paint "Magic" Tool: Clone</h1>
 <h2 align="center">By Bill Kendrick &lt;<a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a>&gt;</h2>
-<p>Draw large square "pixels" on the canvas.</p>
-<p>See also: <a href="bricks.html">Bricks</a></p>
+<p>Clone (copy, via painting) part of the picture. Click ones to choose the source, then click and drag to clone it elsewhere in the drawing. Once you release, click to choose another source and start again.</p>
 </body></html>
