@@ -11,6 +11,7 @@
 <li><a href="calligraphy.html">Calligraphy</a></li>
 <li><a href="cartoon.html">Cartoon</a></li>
 <li><a href="chalk.html">Chalk</a></li>
+<li><a href="clone.html">Clone</a></li>
 <li><a href="color_and_white.html">Color and White</a></li>
 <li><a href="color_shift.html">Color Shift</a></li>
 <li><a href="confetti.html">Confetti</a></li>
@@ -19,7 +20,6 @@
 <li><a href="drip.html">Drip</a></li>
 <li><a href="edges.html">Edges</a></li>
 <li><a href="emboss.html">Emboss</a></li>
-<li><a href="fill.html">Fill</a></li>
 <li><a href="fisheye.html">Fisheye</a></li>
 <li><a href="flip.html">Flip</a></li>
 <li><a href="flower.html">Flower</a></li>
@@ -41,6 +41,7 @@
 <li><a href="pattern.html">Pattern</a></li>
 <li><a href="perspective.html">Perspective</a></li>
 <li><a href="picasso.html">Picasso</a></li>
+<li><a href="pixels.html">Pixels</a></li>
 <li><a href="puzzle.html">Puzzle</a></li>
 <li><a href="rails.html">Rails</a></li>
 <li><a href="rain.html">Rain</a></li>
