@@ -7,6 +7,7 @@
    * Calligraphy
    * Cartoon
    * Chalk
+   * Clone
    * Color and White
    * Color Shift
    * Confetti
@@ -15,7 +16,6 @@
    * Drip
    * Edges
    * Emboss
-   * Fill
    * Fisheye
    * Flip
    * Flower
@@ -37,6 +37,7 @@
    * Pattern
    * Perspective
    * Picasso
+   * Pixels
    * Puzzle
    * Rails
    * Rain
